# src/routes/auth/oauth/index.ts
@@ -1,0 +1,35 @@
+import express from 'express';
+import passport from 'passport';
+
+import validator from '../../../middlewares/validator';
+import { userSchema } from '../schema';
+import * as controller from './controller';
+
+const router = express.Router();
+
+/* /api/auth/oauth/ */
+
+// oauth routing
+// api 한번 정리 필요!
+router.get(
+  '/google',
+  passport.authenticate('google', {
+    scope: ['profile', 'email'],
+  }),
+);
+
+// router.get('/kakao', controller.kakaoLogin);
+
+router.get(
+  '/callback',
+  passport.authenticate('google', { failureRedirect: '/login' }),
+  controller.callbackGoogle,
+);
+// Kakao 로그인 테스트
+router.get('/kakao', controller.oauthKakao);
+router.get('/callback/kakao', controller.callbackKakao);
+
+router.post('/signup', validator(userSchema), controller.oauthSignup);
+router.post('/link', validator(userSchema), controller.oauthLink);
+
+export default router;
