# src/routes/auth/swagger.json
@@ -12,6 +12,7 @@
     "/login": {
       "post": {
         "summary": "로그인",
+        "tags": ["base"],
         "requestBody": {
           "required": true,
           "content": {
@@ -47,6 +48,7 @@
     "/signup": {
       "post": {
         "summary": "회원가입",
+        "tags": ["base"],
         "requestBody": {
           "required": true,
           "content": {
@@ -68,6 +70,7 @@
     "/profile": {
       "get": {
         "summary": "프로필 조회",
+        "tags": ["base"],
         "responses": {
           "200": {
             "description": "loggedIn",
@@ -91,6 +94,7 @@
     "/logout": {
       "get": {
         "summary": "로그아웃",
+        "tags": ["base"],
         "responses": {
           "200": {
             "description": "로그아웃 성공"
@@ -104,6 +108,7 @@
     "/oauth/google": {
       "get": {
         "summary": "구글 로그인",
+        "tags": ["oauth"],
         "responses": {
           "301": {
             "description": "로그인 성공시 UI_SERVER로 redirect. 실패시 UI_SERVER/auth/check로 redirect"
@@ -117,6 +122,7 @@
     "/oauth/kakao": {
       "get": {
         "summary": "카카오 로그인",
+        "tags": ["oauth"],
         "responses": {
           "301": {
             "description": "로그인 성공시 UI_SERVER로 redirect. 실패시 UI_SERVER/auth/check로 redirect"
@@ -127,9 +133,10 @@
         }
       }
     },
-    "/oauth/signup": {
-      "get": {
-        "summary": "Oauth 계정 회원가입",
+    "/oauth/link": {
+      "post": {
+        "summary": "Oauth 계정 연동",
+        "tags": ["oauth"],
         "requestBody": {
           "required": true,
           "content": {
@@ -137,18 +144,56 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "_id": { "type": "string" },
                   "username": { "type": "string" },
                   "password": { "type": "string" },
-                  "name": { "type": "string" }
+                  "name": { "type": "string" },
+                  "major": { "type": "string" },
+                  "studentId": { "type": "number" }
                 }
               }
             }
           }
         },
         "responses": {
-          "301": {
-            "description": "로그인 성공시 UI_SERVER로 redirect. 실패시 UI_SERVER/auth/check로 redirect"
+          "200": {
+            "description": "기존 로컬 계정과 소셜 계정 연동 성공"
+          },
+          "403": {
+            "description": "데이터베이스 에러"
+          }
+        }
+      }
+    },
+    "/validation/username": {
+      "post": {
+        "summary": "Username 중복 여부 validation",
+        "tags": ["validation"],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": { "type": "string" }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "중복 여부에 따라 isExist t/f",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "isExist": { "type": "boolean" }
+                  }
+                }
+              }
+            }
           },
           "403": {
             "description": "데이터베이스 에러"
